<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gamesofsports.EndChallenge">


    <TextView
        android:id="@+id/endChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="#000000"
        android:text="@string/endChallenge"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endChallenge"
        android:layout_marginTop="15dp"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:text="@string/points"
        />

    <TextView
        android:id="@+id/numberPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="50sp"
        android:layout_below="@+id/points"
        />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|bottom"
        >
        <Button
            android:id="@+id/shareFacebook"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/shareFacebook"
            />

        <Button
            android:id="@+id/Home"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:text="@string/home"/>
    </LinearLayout>

</RelativeLayout>
