<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gamesofsports.CreateChallenge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/TitleChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/titleChallenge"/>

        <EditText
            android:id="@+id/nameNewChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TitleChallenge"
            android:maxLength="15"
            />

        <TextView
            android:id="@+id/nameSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nameNewChallenge"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginTop="15dp"
            android:text="sport"
            />

        <TextView
            android:id="@+id/titleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameSport"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:text="@string/titleDescription"
            />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleDescription"
            android:maxLength="200"
            />

        <TextView
            android:id="@+id/titleTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/description"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:text="@string/titleTimer"
            />

        <NumberPicker
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTimer"
            android:layout_toLeftOf="@+id/titleTimer"
            android:layout_toStartOf="@+id/titleTimer"
            android:layout_centerHorizontal="true"
            />

        <NumberPicker
            android:id="@+id/secondes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTimer"
            android:layout_toRightOf="@+id/titleTimer"
            android:layout_toEndOf="@+id/titleTimer"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/createNewChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/secondes"
            android:layout_marginTop="25dp"
            android:text="@string/create"
            />
    </RelativeLayout>
</ScrollView>
